--- a/EAM_3/style.css
+++ b/EAM_3/style.css
@@ -2391,7 +2391,7 @@ select.mobile-device {
 .footer {
     padding: 90px 0 80px !important;
     color: #999;
-    background-color: #2B2B2B;
+    background-color: #00111f;
 }
 
 .footer .widget-title {
@@ -2787,7 +2787,7 @@ select.mobile-device {
 -------------------------------------------------------------------*/
 
 .all-title-box{
-	background: url(uploads/inner-bg.jpg);
+	background: linear-gradient(to bottom right,#7faccd,#1969a5);
 	position: relative;
 	padding: 200px 0 70px 0px;
 	margin-bottom: 0px;
@@ -2796,7 +2796,8 @@ select.mobile-device {
 .all-title-box::before{
 	content: "";
 	position: absolute;
-	background: rgba(0,0,0,0.5);
+    background: rgb(0,89,156);
+    background: linear-gradient(0deg, rgba(0,89,156,1) 0%, rgba(0,53,93,1) 100%);
 	width: 100%;
 	height: 100%;
 	top: 0px;
