--- a/EAM_3/style.css
+++ b/EAM_3/style.css
@@ -2475,12 +2475,12 @@ select.mobile-device {
 }
 
 .copyrights {
-    border-top: 1px dashed rgba(255, 255, 255, 0.1);
-    background-color: #393939;
+    border-top: 1px dashed #00080f;
+    background-color: #00111f;
     box-sizing: border-box;
     width: 100%;
     text-align: left;
-    padding: 30px 0px;
+    padding: 15px 0px;
     overflow: hidden;
 }
 
