--- a/EAM_3/style.css
+++ b/EAM_3/style.css
@@ -4738,3 +4738,11 @@ select.mobile-device {
     list-style: outside none none;
     outline: rgb(120, 126, 132) none 0px;
 }
+
+.routeFind{
+    float: left;
+}
+
+.routeMap{
+    float: right;
+}
