--- a/EAM_3/style.css
+++ b/EAM_3/style.css
@@ -2764,7 +2764,7 @@ select.mobile-device {
     font-size: 16px;
 }
 
-#right-panel {
+#directions-panel {
     font-family: 'Roboto','sans-serif';
     line-height: 30px;
 }
