--- a/EAM_3/style.css
+++ b/EAM_3/style.css
@@ -2755,11 +2755,14 @@ select.mobile-device {
 	}
 }
 
-.hours {
+ul.hours {
     border: 1px solid #e1e1e1;
+    height: 400px;
+    overflow: hidden;
+    overflow-y:scroll;
 }
 
-.hours > li {
+ul.hours > li {
     border: 1px solid #e1e1e1;
     font-size: 16px;
 }
