--- a/EAM_3/style.css
+++ b/EAM_3/style.css
@@ -672,6 +672,56 @@ body.realestate_version .header_style_01 .navbar-right > li.search-option form b
 .login-trigger:hover {
     background: #4c8ab9;
 }
+
+.navbar-right > li.lang-option{
+    position: relative;
+    margin-left: 8px !important;
+}
+
+.navbar-right > li.lang-option button.lang{
+	line-height: 43px;
+	width: auto;
+	color: #fff;
+	background: #00599C;
+	border: none;
+	transition: all .3s ease-in-out;
+    border-radius: 2px;
+    margin-left: -8%;
+}
+
+.navbar-right > li.lang-option button.lang:hover{
+	background: #4c8ab9;
+}
+
+.navbar-right > li.lang-option form.dropdown-menu{
+	position: absolute;
+    padding: 5px;
+    margin-left: 10px;
+	border-radius: 0;
+	right: 0;
+	left: auto;
+	top: 100%;
+	box-shadow: none;
+	border: none;
+	float: none;
+	margin: 0;
+	background: #fff;
+	box-shadow: 0 0px 5px 2px rgba(0,0,0,.175);
+}
+
+.navbar-right > li.lang-option form button{
+	width: 150px;
+	color: #fff;
+	background: #00599C;
+	border: 1px solid #fff;
+	line-height: 40px;
+	text-align: center;
+	position: relative;
+	top: auto;
+	/*right: 5px;*/
+	bottom: auto;
+	border-radius: 2px;
+}
   
 /* modal */
 .close {
@@ -2755,9 +2805,11 @@ select.mobile-device {
 	}
 }
 
+/* hours */
+
 ul.hours {
     border: 1px solid #e1e1e1;
-    height: 400px;
+    height: 350px;
     overflow: hidden;
     overflow-y:scroll;
 }
@@ -2765,6 +2817,33 @@ ul.hours {
 ul.hours > li {
     border: 1px solid #e1e1e1;
     font-size: 16px;
+}
+
+/* stops list */
+
+ul.stops-list {
+    list-style: none;
+    height: 350px;
+    overflow: hidden;
+    overflow-y:scroll;
+}
+
+ul.stops-list > li {
+    list-style-type: none;
+}
+
+ul.stops-list > li span {
+    background-color: #fff;
+    border: 4px solid #00599C;
+    border-radius: 12px 12px 12px 12px;
+    display: inline-block;
+    height: 5px;
+    position: relative;
+    top: -1px;
+    width: 5px;
+    margin-left: 6px;
+    margin-right: 7px;
+    z-index: 5;
 }
 
 #directions-panel {
@@ -4746,12 +4825,3 @@ ul.hours > li {
     list-style: outside none none;
     outline: rgb(120, 126, 132) none 0px;
 }
-
-.routeFind{
-    float: left;
-}
-
-.routeMap{
-    float: right;
-}
-
